# openeuler-iSulad

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README_zh.md  buildforc.sh  commit.yml  iSulad.spec  release_notes  update-version.sh  uuid
CI/: Dockerfile  Dockerfile-centos  build.sh  install_depends.sh  make-and-install.sh  pr-gateway.sh  run-testcases.sh  testcase_assign_S1
CI/dockerfiles/: Dockerfile-fedora
CI/test_cases/: helpers.bash  helpers.sh
CI/test_cases/basic_cases/: image_load.bash  storage_metdata.bash  tag.bash
CI/test_cases/container_cases/: bigdata_stream.sh  cdi_test.sh  cni_test.bash  cni_test.sh  container_network_cleanup.sh  container_with_network.sh  cp.bash  cpu_rt.sh  create.bash  domainname.sh  env.sh  exec.sh  inspect.bash  inspect.sh  restart.bash  run.bash  run.sh  security_selinux.bash  share_ns_test.bash  start.bash  start.sh  stop.bash  top.bash  ulimit.bash  update.bash  volume.sh
CI/test_cases/image_cases/: image_load.bash  image_prune.sh  image_remove.bash  image_tag.bash  images_list.bash  img_fs_info.bash  registry.bash
cmake/: checker.cmake  helper.cmake  options.cmake  protoc.cmake  set_build_flags.cmake
docs/: architecture_en.md  build_guide.md  build_guide_riscv.md  build_guide_with_docker_image_zh.md  build_guide_zh.md  build_with_rpm.md  install_iSulad_on_Centos_7.sh  install_iSulad_on_Ubuntu_20_04_LTS.sh
rpms/centos8_x86_64/: grpc-debugsource-1.31.0-1.x86_64.rpm  grpc-devel-1.31.0-1.x86_64.rpm  grpc-devel-debuginfo-1.31.0-1.x86_64.rpm  iSulad-2.1.0-1.x86_64.rpm  iSulad-debugsource-2.1.0-1.x86_64.rpm  lcr-2.1.0-2.x86_64.rpm  lcr-debuginfo-2.1.0-2.x86_64.rpm  lcr-debugsource-2.1.0-2.x86_64.rpm  lcr-devel-2.1.0-2.x86_64.rpm  libarchive-3.4.3-4.x86_64.rpm  libarchive-debuginfo-3.4.3-4.x86_64.rpm  libarchive-debugsource-3.4.3-4.x86_64.rpm  libarchive-devel-3.4.3-4.x86_64.rpm  lxc-4.0.3-2022072501.x86_64.rpm  lxc-debuginfo-4.0.3-2022072501.x86_64.rpm  lxc-debugsource-4.0.3-2022072501.x86_64.rpm  lxc-devel-4.0.3-2022072501.x86_64.rpm  lxc-libs-4.0.3-2022072501.x86_64.rpm  lxc-libs-debuginfo-4.0.3-2022072501.x86_64.rpm  protobuf-3.14.0-4.x86_64.rpm  protobuf-compiler-3.14.0-4.x86_64.rpm  protobuf-debugsource-3.14.0-4.x86_64.rpm  protobuf-devel-3.14.0-4.x86_64.rpm  protobuf-lite-3.14.0-4.x86_64.rpm  protobuf-lite-debuginfo-3.14.0-4.x86_64.rpm  protobuf-lite-devel-3.14.0-4.x86_64.rpm
src/: CMakeLists.txt  constants.h  error.c  log.c  log.h  namespace.c  namespace.h  pack_config.c  types_def.c  types_def.h
src/cmd/: command_parser.c  command_parser.h
src/common/: constants.h
src/config/: isulad_config.c  isulad_config.h
src/cutils/: utils.c  utils.h  utils_file.c  utils_file.h  utils_images.h  utils_string.c  utils_string.h
src/daemon/: CMakeLists.txt
src/daemon/entry/cri/streams/: CMakeLists.txt  attach_serve.cc  exec_serve.cc  portforward_serve.cc  portforward_serve.h  session.cc  session.h  stream_server.cc  stream_server.h
src/daemon/entry/cri/streams/websocket/: ws_server.cc  ws_server.h
src/daemon/modules/image/oci/storage/layer_store/: CMakeLists.txt  layer_store.c  layer_store.h
src/daemon/modules/image/oci/storage/layer_store/graphdriver/: driver.c  driver.h
src/daemon/modules/image/oci/storage/layer_store/graphdriver/devmapper/: CMakeLists.txt  deviceset.c  driver_devmapper.c  driver_devmapper.h  wrapper_devmapper.c
src/daemon/modules/image/oci/storage/layer_store/graphdriver/overlay2/: CMakeLists.txt  driver_overlay2.c  driver_overlay2.h  driver_overlay2_types.h
src/daemon/modules/image/oci/storage/layer_store/graphdriver/quota/: project_quota.c
src/daemon/modules/image/oci/storage/layer_store/remote_layer_support/: remote_support.c  remote_support.h  ro_symlink_maintain.c  ro_symlink_maintain.h
src/daemon/nri/: CMakeLists.txt
src/daemon/nri/client/: CMakeLists.txt  grpc_nri_plugin_client.cc  grpc_nri_plugin_client.h
src/daemon/nri/plugin/: CMakeLists.txt  nri_adaption.cc  nri_adaption.h  plugin.cc  plugin.h
src/http/: http.c  http.h  mediatype.h  parser.c  parser.h
src/image/: image.c  image.h
src/map/: map.c
src/plugin/: plugin.c
src/services/: callback.h
src/sha256/: sha256.c  sha256.h
src/utils/: CMakeLists.txt
src/utils/cutils/: CMakeLists.txt  changes.c  changes.h  filters.c  linked_list.h  namespace.c  namespace.h  network_namespace.c  network_namespace.h  utils.c  utils.h  utils_file.c  utils_file.h  utils_mount_spec.c  utils_network.c  utils_pwgr.c  utils_queue.c  utils_queue.h  utils_string.c  utils_string.h  utils_timestamp.c  utils_timestamp.h  utils_verify.c  utils_verify.h
src/utils/cutils/map/: map.c  map.h  map_s.c  map_s.h  rb_tree.c
test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  test.md  test.sh
test/Testing/: TAG
test/conf/: isulad.pc
test/cutils/: CMakeLists.txt
test/fuzz/: test_container_export_cb_fuzz.cc  test_image_load_cb_fuzz.cc  test_image_pull_cb_fuzz.cc  test_import_cb_fuzz.cc  test_login_cb_fuzz.cc  test_logout_cb_fuzz.cc
test/image/: CMakeLists.txt  image_ut.cc
test/image/oci/: CMakeLists.txt  oci_llt_common.cc  oci_llt_common.h
test/image/oci/oci_config_merge/: CMakeLists.txt  oci_config_merge_llt.cc
test/image/oci/registry/: CMakeLists.txt
test/image/oci/storage/: CMakeLists.txt
test/image/oci/storage/images/: CMakeLists.txt  storage_images_llt.cc
test/image/oci/storage/layers/: CMakeLists.txt
test/image/oci/storage/remote_layer_support/: CMakeLists.txt  mock_flags.c  mock_flags.h  remote_layer_ut.cc  utils_mock.c
test/image/oci/storage/rootfs/: CMakeLists.txt  storage_rootfs_llt.cc  storage_rootfs_ut.cpp
test/mocks/: container_operator_mock.h  image_mock.cc  image_mock.h  namespace_mock.h  remote_store_mock.h  shim_v2_mock.cc  shim_v2_mock.h  storage_mock.cc  storage_mock.h  sysinfo_mock.cc  sysinfo_mock.h
test/path/: CMakeLists.txt
test/services/: CMakeLists.txt
test/src/: Makefile  cmake_install.cmake  isula  isulad-shim
test/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tools/: static_check
(+836 files in other folders)
